--- a/Simple Chat/App.config
+++ b/Simple Chat/App.config
@@ -3,4 +3,25 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
     </startup>
+  <connectionStrings>
+   <add name="DefaultConnection"
+        connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=Simple Chat Users;Integrated Security=True"
+       providerName="System.Data.SqlClient"/>
+  </connectionStrings>
+    <system.serviceModel>
+        <bindings>
+            <netTcpBinding>
+                <binding name="NetTcpBinding_IServiceChat" />
+            </netTcpBinding>
+        </bindings>
+        <client>
+            <endpoint address="net.tcp://localhost:8302/" binding="netTcpBinding"
+                bindingConfiguration="NetTcpBinding_IServiceChat" contract="ServiceChat.IServiceChat"
+                name="NetTcpBinding_IServiceChat">
+                <identity>
+                    <userPrincipalName value="DESKTOP-G5EG346\toxaa" />
+                </identity>
+            </endpoint>
+        </client>
+    </system.serviceModel>
 </configuration>
